--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="home" class="hero">
             <div class="video-background">
                 <video autoplay muted loop playsinline preload="metadata">
-                    <source src="public/hero/juice-hero.mp4" type="video/mp4">
+                    <source src="assets/hero/juice-hero.mp4" type="video/mp4">
                 </video>
                 <div class="overlay"></div>
             </div>
