--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                     <!-- Map Column -->
                     <div class="map-column">
-                        <h3 class="map-title">MAPA</h3>
+                        <h3 class="map-title">MAPA DO EVENTO</h3>
                         <div class="map-container-programacao">
                             <img src="assets/img/map.png" alt="Mapa do Evento Juice na LOFI 220" class="event-map">
                         </div>
