--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
             </div>
 
             <div class="container hero-content">
-
-                <h1>É JUICE BABY</h1>
-                <p>Hiphop, funk e megafunk na LOFI 220.</p>
+                <h1>IT'S JUICE BABY!</h1>
+                <p>HIP-HOP, FUNK E MEGAFUNK.</p>
                 <div class="hero-btns">
                     <a href="https://www.pensanoevento.com.br/baladas/89526/juice-2000s" target="_blank"
                         class="btn btn-primary btn-lg">
@@ -176,26 +175,22 @@
                         eventos marcados como "uma das melhores baladas de Joinville" e celebrações de aniversário que
                         comprovam sua longevidade e conexão com o público.</p>
 
-                    <div class="concept-grid">
-                        <div class="concept-item">
-                            <h3>CONCEITO MUSICAL</h3>
-                            <p>Cada edição traz um tema único, resgatando clássicos dos anos 2000 ou criando
-                                experiências imersivas. A curadoria mescla trap, rap, funk retrô e megafunk.</p>
+                    <div class="history-photos-container">
+                        <div class="polaroid-card">
+                            <img src="assets/img/historia/party1.webp" alt="Juice Party Crowd">
                         </div>
-                        <div class="concept-item">
-                            <h3>A VIBE</h3>
-                            <p>É a festa onde "todos os caminhos levam pra @lofi.220". Um encontro de quem vive e
-                                respira a cultura urbana, onde o coletivo importa mais que o individual.</p>
+                        <div class="polaroid-card">
+                            <img src="assets/img/historia/party2.webp" alt="Juice Party Stage">
+                        </div>
+                        <div class="polaroid-card">
+                            <img src="assets/img/historia/party3.webp" alt="Juice Party Vibes">
                         </div>
                     </div>
 
                     <a href="https://www.pensanoevento.com.br/baladas/89526/juice-2000s" target="_blank"
                         class="btn btn-primary mt-4">
-                        #ÉJUICEbaby
+                        COMPRAR INGRESSO
                     </a>
-                </div>
-                <div class="history-img-wrapper">
-                    <img src="assets/img/juice-cup.png" alt="Juice Character" class="floating-char">
                 </div>
             </div>
         </section>
