--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juice | A Maior Revoada de Joinville</title>
+    <title>Juice | A Melhor festa de Joinville</title>
     <meta name="description" content="Acontece a 2ª edição da Juice na LOFI 220. Energia, diversão e muito funk!">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +19,7 @@
             <a href="#" class="logo-link"><img src="assets/img/juice-logo.png" alt="Juice Logo" class="header-logo"></a>
             <nav class="desktop-nav">
                 <a href="#programacao">Programação</a>
+                <a href="#destaques">Localização</a>
                 <a href="#historia">História</a>
                 <a href="#faq">FAQ</a>
                 <a href="https://drive.google.com/drive/folders/16DgiSE7jrYuMxRNbblZoF1ebf_al1ddH"
@@ -32,6 +33,7 @@
         </div>
         <div class="mobile-menu">
             <a href="#programacao">Programação</a>
+            <a href="#destaques">Localização</a>
             <a href="#historia">História</a>
             <a href="#faq">FAQ</a>
             <a href="https://drive.google.com/drive/folders/16DgiSE7jrYuMxRNbblZoF1ebf_al1ddH" target="_blank">Fotos</a>
@@ -56,52 +58,38 @@
                 </div>
             </div>
         </section>
+
         <section id="programacao" class="section">
             <div class="container">
                 <div class="section-header center">
                     <h2>PROGRAMAÇÃO</h2>
                 </div>
                 <div class="programacao-grid">
-                    <div class="carousel-column">
-                        <div class="carousel-container">
-                            <div class="carousel-perspective">
-                                <div class="carousel-wrapper">
-                                    <div class="artist-card-3d" data-name="DIGUERA"><img src="assets/img/diguera.jpg"
-                                            alt="Diguera"></div>
-                                    <div class="artist-card-3d" data-name="LUCAS H."><img src="assets/img/lucas-h.jpg"
-                                            alt="Lucas H."></div>
-                                    <div class="artist-card-3d" data-name="RODRIZ"><img src="assets/img/rodriz.jpg"
-                                            alt="Rodriz"></div>
-                                    <div class="artist-card-3d" data-name="ZATELLI"><img src="assets/img/zatelli.jpg"
-                                            alt="Zatelli"></div>
-                                </div>
-                            </div>
-                            <button class="carousel-arrow carousel-prev" aria-label="Anterior">‹</button>
-                            <button class="carousel-arrow carousel-next" aria-label="Próximo">›</button>
-                        </div>
-                        <div class="artist-info">
-                            <h3 class="artist-name-display">DIGUERA</h3>
-                            <div class="carousel-dots">
-                                <span class="dot active"></span><span class="dot"></span><span class="dot"></span><span
-                                    class="dot"></span>
-                            </div>
+                    <div class="programacao-image-column">
+                        <div class="programacao-image-container">
+                            <img src="assets/img/story12.webp" alt="Juice Evento" class="programacao-img">
                         </div>
                     </div>
                     <div class="map-column">
                         <h3 class="map-title">MAPA DO EVENTO</h3>
-                        <div class="map-container-programacao"><img src="assets/img/map.png"
-                                alt="Mapa do Evento Juice na LOFI 220" class="event-map"></div>
+                        <div class="map-container-programacao">
+                            <img src="assets/img/map.webp" alt="Mapa do Evento Juice na LOFI 220" class="event-map">
+                        </div>
                     </div>
                 </div>
-                <div class="action-container center mt-4">
+                <div class="action-container text-center mt-4">
                     <a href="https://www.pensanoevento.com.br/baladas/89526/juice-2000s" target="_blank"
                         class="btn btn-primary btn-lg btn-buy">COMPRAR INGRESSO</a>
-                    <p class="small-text mt-2"><a
-                            href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+de+camarote+na+*JUICE*!&type=phone_number&app_absent=0"
-                            target="_blank">Procurando um camarote? chama aqui</a></p>
+                    <div class="mt-2">
+                        <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+de+camarote+na+*JUICE*!&type=phone_number&app_absent=0"
+                            target="_blank" style="text-decoration: underline; color: white;">
+                            Procurando um camarote? chama aqui
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
+
         <section id="destaques" class="section bg-darker">
             <div class="container">
                 <div class="content-block center">
@@ -118,6 +106,7 @@
                 </div>
             </div>
         </section>
+
         <section id="historia" class="section">
             <div class="container history-grid">
                 <div class="history-text">
@@ -139,6 +128,7 @@
                 </div>
             </div>
         </section>
+
         <section id="faq" class="section bg-darker">
             <div class="container small-container">
                 <div class="section-header center">
