--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="#faq">FAQ</a>
             </nav>
             <div class="header-actions">
-                <a href="https://www.pensanoevento.com.br/baladas/89526/juice-2000s" target="_blank"
+                <a href="https://www.pensanoevento.com.br/juice" target="_blank"
                     class="btn btn-primary desktop-btn">Comprar Ingresso</a>
                 <button class="mobile-menu-btn" aria-label="Menu"><span></span><span></span></button>
             </div>
@@ -48,10 +48,11 @@
                 <div class="overlay"></div>
             </div>
             <div class="container hero-content">
+                <img src="assets/hero/juicehero.webp" alt="Juice Hero" class="hero-image">
                 <h1>IT'S JUICE BABY!</h1>
                 <p>HIP-HOP, FUNK E MEGAFUNK.</p>
                 <div class="hero-btns">
-                    <a href="https://www.pensanoevento.com.br/baladas/89526/juice-2000s" target="_blank"
+                    <a href="https://www.pensanoevento.com.br/juice" target="_blank"
                         class="btn btn-primary btn-lg">GARANTIR INGRESSO</a>
                     <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+de+camarote+na+*JUICE*!&type=phone_number&app_absent=0"
                         target="_blank" class="btn btn-outline btn-lg">RESERVAR CAMAROTE</a>
@@ -78,7 +79,7 @@
                     </div>
                 </div>
                 <div class="action-container text-center mt-4">
-                    <a href="https://www.pensanoevento.com.br/baladas/89526/juice-2000s" target="_blank"
+                    <a href="https://www.pensanoevento.com.br/juice" target="_blank"
                         class="btn btn-primary btn-lg btn-buy">COMPRAR INGRESSO</a>
                     <div class="mt-2">
                         <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+de+camarote+na+*JUICE*!&type=phone_number&app_absent=0"
@@ -123,8 +124,8 @@
                         <div class="polaroid-card"><img src="assets/img/historia/party3.webp" alt="Juice Party Vibes">
                         </div>
                     </div>
-                    <a href="https://www.pensanoevento.com.br/baladas/89526/juice-2000s" target="_blank"
-                        class="btn btn-primary mt-4">COMPRAR INGRESSO</a>
+                    <a href="https://drive.google.com/drive/folders/16DgiSE7jrYuMxRNbblZoF1ebf_al1ddH" target="_blank"
+                        class="btn btn-primary mt-4">VER FOTOS</a>
                 </div>
             </div>
         </section>
