--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <div class="hero-btns">
                     <a href="https://www.pensanoevento.com.br/juice" target="_blank"
                         class="btn btn-primary btn-lg">GARANTIR INGRESSO</a>
-                    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+de+camarote+na+*JUICE*!&type=phone_number&app_absent=0"
-                        target="_blank" class="btn btn-outline btn-lg">RESERVAR CAMAROTE</a>
+                    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0"
+                        target="_blank" class="btn btn-outline btn-lg">RESERVAS / ANIVERSÁRIO</a>
                 </div>
             </div>
         </section>
