--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <p>HIP-HOP, FUNK E MEGAFUNK.</p>
                 <div class="hero-btns">
     <a href="https://www.pensanoevento.com.br/juice" target="_blank" 
-       class="btn btn-primary btn-lg">GARANTIR INGRESSO</a>
+       class="btn btn-primary btn-lg">INGRESSOS</a>
     
     <a href="https://www.pensanoevento.com.br/nomenalista/91512/juice-bye-2025" target="_blank" 
-       class="btn btn-outline btn-lg">LISTA VIP ATÉ 00:00</a>
+       class="btn btn-outline btn-lg">LISTA VIP</a>
     
     <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0" target="_blank" 
        class="btn btn-primary btn-lg">RESERVAS / ANIVERSÁRIO</a>
