--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                     <a href="https://www.pensanoevento.com.br/juice" target="_blank"
                         class="btn btn-primary btn-lg btn-buy">COMPRAR INGRESSO</a>
                     <div class="mt-2">
-                        <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+de+camarote+na+*JUICE*!&type=phone_number&app_absent=0"
+                        <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0" target="_blank"
                             target="_blank" style="text-decoration: underline; color: white;">
-                            Procurando um camarote? chama aqui
+                            Procurando uma reserva? Chama aqui!
                         </a>
                     </div>
                 </div>
