--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juice | A Melhor festa de Joinville</title>
+    <title>Juice | It's Juice Baby!</title>
     <meta name="description" content="Acontece a 2ª edição da Juice na LOFI 220. Energia, diversão e muito funk!">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
