--- a/index.html
+++ b/index.html
@@ -116,10 +116,7 @@
             <div class="container history-grid">
                 <div class="history-text">
                     <h2>NOSSA HISTÓRIA</h2>
-                    <p>Nascida no circuito alternativo de Joinville, a festa rapidamente se consolidou como referência
-                        da cena musical da cidade. As edições acontecem regularmente na <strong>LOFI 220</strong>, com
-                        eventos marcados como "uma das melhores baladas de Joinville" e celebrações de aniversário que
-                        comprovam sua longevidade e conexão com o público.</p>
+                    <p>Direto da cena noturna de Joinville, JUICE se consolidou como uma das principais referências da vida noturna da cidade. Com uma curadoria musical que mistura ritmos e uma experiência que evolui a cada edição, a festa atrai um público fiel e cada vez maior. Realizada regularmente na LOFI 220, a Juice entrega noites intensas, pistas cheias e celebrações memoráveis que reforçam sua identidade, longevidade e conexão real com o público.</p>
                     <div class="history-photos-container">
                         <div class="polaroid-card"><img src="assets/img/historia/party1.webp" alt="Juice Party Crowd">
                         </div>
