--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juice | IT'S JUICE BABY!</title>
-    <meta name="description" content="A edição da Juice acontece na LOFI 220. Energia, diversão e muito funk!">
+    <title>@juice.entt</title>
+    <meta name="description" content="IT'S JUICE BABY!">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700;900&display=swap" rel="stylesheet">
