--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <a href="https://www.pensanoevento.com.br/nomenalista/91512/juice-bye-2025" target="_blank" 
        class="btn btn-outline btn-lg">LISTA VIP</a>
     
-    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0" target="_blank" 
-       class="btn btn-primary btn-lg">RESERVAS / ANIVERSÁRIO</a>
+    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+para+comemorar+meu+aniversário+na+*JUICE*!&type=phone_number&app_absent=0" target="_blank" 
+       class="btn btn-primary btn-lg">ANIVERSÁRIO</a>
 </div>
             </div>
         </section>
@@ -88,7 +88,7 @@
                     <div class="mt-2">
                         <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0" target="_blank"
                             target="_blank" style="text-decoration: underline; color: white;">
-                            Procurando uma reserva? Chama aqui!
+                            PROCURANDO UMA RESERVA? CHAMA AQUI!
                         </a>
                     </div>
                 </div>
